--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@
 *.i*86
 *.x86_64
 *.hex
+*.app
+*.dmg
 
 # Debug files
 *.dSYM/
@@ -51,4 +53,3 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-recusividade/aula001
